QtBeef/src/Qt/qcompleter.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QCompleter
// --------------------------------------------------------------
[CRepr]
struct QCompleter_Ptr: void
{
}
extension CQt
{
	[LinkName("QCompleter_new")]
	public static extern QCompleter_Ptr* QCompleter_new();
	[LinkName("QCompleter_new2")]
	public static extern QCompleter_Ptr* QCompleter_new2(QAbstractItemModel_Ptr** model);
	[LinkName("QCompleter_new3")]
	public static extern QCompleter_Ptr* QCompleter_new3(void** completions);
	[LinkName("QCompleter_new4")]
	public static extern QCompleter_Ptr* QCompleter_new4(QObject_Ptr** parent);
	[LinkName("QCompleter_new5")]
	public static extern QCompleter_Ptr* QCompleter_new5(QAbstractItemModel_Ptr** model, QObject_Ptr** parent);
	[LinkName("QCompleter_new6")]
	public static extern QCompleter_Ptr* QCompleter_new6(void** completions, QObject_Ptr** parent);
	[LinkName("QCompleter_Delete")]
	public static extern void QCompleter_Delete(QCompleter_Ptr* self);
	[LinkName("QCompleter_MetaObject")]
	public static extern QMetaObject_Ptr** QCompleter_MetaObject(QCompleter_Ptr* self);
	[LinkName("QCompleter_Qt_Metacast")]
	public static extern void* QCompleter_Qt_Metacast(QCompleter_Ptr* self, c_char* param1);
	[LinkName("QCompleter_Qt_Metacall")]
	public static extern c_int QCompleter_Qt_Metacall(QCompleter_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QCompleter_Tr")]
	public static extern libqt_string QCompleter_Tr(c_char* s);
	[LinkName("QCompleter_SetWidget")]
	public static extern void QCompleter_SetWidget(QCompleter_Ptr* self, QWidget_Ptr** widget);
	[LinkName("QCompleter_Widget")]
	public static extern QWidget_Ptr** QCompleter_Widget(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetModel")]
	public static extern void QCompleter_SetModel(QCompleter_Ptr* self, QAbstractItemModel_Ptr** c);
	[LinkName("QCompleter_Model")]
	public static extern QAbstractItemModel_Ptr** QCompleter_Model(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetCompletionMode")]
	public static extern void QCompleter_SetCompletionMode(QCompleter_Ptr* self, QCompleter_CompletionMode mode);
	[LinkName("QCompleter_CompletionMode")]
	public static extern QCompleter_CompletionMode QCompleter_CompletionMode(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetFilterMode")]
	public static extern void QCompleter_SetFilterMode(QCompleter_Ptr* self, void* filterMode);
	[LinkName("QCompleter_FilterMode")]
	public static extern void* QCompleter_FilterMode(QCompleter_Ptr* self);
	[LinkName("QCompleter_Popup")]
	public static extern QAbstractItemView_Ptr** QCompleter_Popup(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetPopup")]
	public static extern void QCompleter_SetPopup(QCompleter_Ptr* self, QAbstractItemView_Ptr** popup);
	[LinkName("QCompleter_SetCaseSensitivity")]
	public static extern void QCompleter_SetCaseSensitivity(QCompleter_Ptr* self, Qt_CaseSensitivity caseSensitivity);
	[LinkName("QCompleter_CaseSensitivity")]
	public static extern Qt_CaseSensitivity QCompleter_CaseSensitivity(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetModelSorting")]
	public static extern void QCompleter_SetModelSorting(QCompleter_Ptr* self, QCompleter_ModelSorting sorting);
	[LinkName("QCompleter_ModelSorting")]
	public static extern QCompleter_ModelSorting QCompleter_ModelSorting(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetCompletionColumn")]
	public static extern void QCompleter_SetCompletionColumn(QCompleter_Ptr* self, c_int column);
	[LinkName("QCompleter_CompletionColumn")]
	public static extern c_int QCompleter_CompletionColumn(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetCompletionRole")]
	public static extern void QCompleter_SetCompletionRole(QCompleter_Ptr* self, c_int role);
	[LinkName("QCompleter_CompletionRole")]
	public static extern c_int QCompleter_CompletionRole(QCompleter_Ptr* self);
	[LinkName("QCompleter_WrapAround")]
	public static extern bool QCompleter_WrapAround(QCompleter_Ptr* self);
	[LinkName("QCompleter_MaxVisibleItems")]
	public static extern c_int QCompleter_MaxVisibleItems(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetMaxVisibleItems")]
	public static extern void QCompleter_SetMaxVisibleItems(QCompleter_Ptr* self, c_int maxItems);
	[LinkName("QCompleter_CompletionCount")]
	public static extern c_int QCompleter_CompletionCount(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetCurrentRow")]
	public static extern bool QCompleter_SetCurrentRow(QCompleter_Ptr* self, c_int row);
	[LinkName("QCompleter_CurrentRow")]
	public static extern c_int QCompleter_CurrentRow(QCompleter_Ptr* self);
	[LinkName("QCompleter_CurrentIndex")]
	public static extern QModelIndex_Ptr* QCompleter_CurrentIndex(QCompleter_Ptr* self);
	[LinkName("QCompleter_CurrentCompletion")]
	public static extern libqt_string QCompleter_CurrentCompletion(QCompleter_Ptr* self);
	[LinkName("QCompleter_CompletionModel")]
	public static extern QAbstractItemModel_Ptr** QCompleter_CompletionModel(QCompleter_Ptr* self);
	[LinkName("QCompleter_CompletionPrefix")]
	public static extern libqt_string QCompleter_CompletionPrefix(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetCompletionPrefix")]
	public static extern void QCompleter_SetCompletionPrefix(QCompleter_Ptr* self, libqt_string prefix);
	[LinkName("QCompleter_Complete")]
	public static extern void QCompleter_Complete(QCompleter_Ptr* self);
	[LinkName("QCompleter_SetWrapAround")]
	public static extern void QCompleter_SetWrapAround(QCompleter_Ptr* self, bool wrap);
	[LinkName("QCompleter_PathFromIndex")]
	public static extern libqt_string QCompleter_PathFromIndex(QCompleter_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QCompleter_SplitPath")]
	public static extern void* QCompleter_SplitPath(QCompleter_Ptr* self, libqt_string path);
	[LinkName("QCompleter_EventFilter")]
	public static extern bool QCompleter_EventFilter(QCompleter_Ptr* self, QObject_Ptr** o, QEvent_Ptr** e);
	[LinkName("QCompleter_Event")]
	public static extern bool QCompleter_Event(QCompleter_Ptr* self, QEvent_Ptr** param1);
	[LinkName("QCompleter_Activated")]
	public static extern void QCompleter_Activated(QCompleter_Ptr* self, libqt_string text);
	[LinkName("QCompleter_Activated2")]
	public static extern void QCompleter_Activated2(QCompleter_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QCompleter_Highlighted")]
	public static extern void QCompleter_Highlighted(QCompleter_Ptr* self, libqt_string text);
	[LinkName("QCompleter_Highlighted2")]
	public static extern void QCompleter_Highlighted2(QCompleter_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QCompleter_Tr2")]
	public static extern libqt_string QCompleter_Tr2(c_char* s, c_char* c);
	[LinkName("QCompleter_Tr3")]
	public static extern libqt_string QCompleter_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QCompleter_Complete1")]
	public static extern void QCompleter_Complete1(QCompleter_Ptr* self, QRect_Ptr* rect);
}
